# rust-scripts

./: .gitignore  LICENSE  README.md
bmr/: Cargo.toml  foo.json
bmr/src/: item.rs  lib.rs  list.rs  main.rs  storage.rs
db_migrations_checker/: Cargo.toml
db_migrations_checker/migrations/: 00001_tables_types.down.sql  00001_tables_types.up.sql  00002_drop_up.down.sql  00002_drop_up.up.sql  00003_add.down.sql  00003_add.up.sql  00004_multi.down.sql  00004_multi.up.sql  00005_multi_cascade.down.sql  00005_multi_cascade.up.sql  00006_views.down.sql  00006_views.up.sql  00007_rename.down.sql  00007_skip.down.sql  00007_skip.up.sql  00008_rename.up.sql
db_migrations_checker/src/: main.rs
games/: Cargo.toml  readme.md
games/example/: dummy_hs_config.json
games/src/: ascii.rs  deck.rs  guess_the_number.rs  hide_and_seek.rs  lib.rs  main.rs  rock_paper_scissors.rs  trivia.rs  war.rs
games_terminal/: Cargo.toml  Makefile
games_terminal/src/: coins.rs  input.rs  lib.rs  main.rs  movement.rs  point.rs  render.rs  timer.rs  treasure.rs
kv/: Cargo.toml  readme.md
kv/src/: main.rs
kvs/: Cargo.toml  Makefile  kvs.db  readme.md
kvs/src/: lib.rs  main.rs
lobsters/: Cargo.toml  comments_response.json  newest_response.json
lobsters/src/: client.rs  lib.rs  main.rs
math/: Cargo.toml
math/src/: ascii.rs  deck.rs  dummy_hs_config.json  guess_the_number.rs  hide_and_seek.rs  lib.rs  main.rs  rock_paper_scissor.rs  rps.rs  trivia.rs  util.rs
math/src/rps/: game.rs
school_lunch/: Cargo.toml  menu_response.json
school_lunch/src/: client.rs  main.rs
wayback/: Cargo.toml
wayback/src/: client.rs  main.rs
wayback_downloads/: Cargo.toml
wayback_downloads/src/: cdx.rs  lib.rs  main.rs
wayback_downloads/tests/: cdx.json
wayback_urls/: Cargo.toml  wayback_response.json
weather/: Cargo.toml
weather/src/: client.rs  main.rs
wfc/: Cargo.toml
wfc/src/: lib.rs  main.rs
