[package]
name = "lobsters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = "1.0.200"
serde_derive = "1.0.200"
serde_json = "1.0.116"
