[package]
name = "wayback_downloads"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = "1.0.201"
serde_derive = "1.0.201"
serde_json = "1.0.117"
thiserror = "1.0.62"
